syntax = "proto3";

// Web exposes a backend server over gRPC.
package web;

import "google/protobuf/empty.proto";
import "github.com/johanbrandhorst/protobuf/proto/gopherjs.proto";

// Define the package locations the generated files will go into

option (gopherjs.gopherjs_package) = "github.com/kyeett/gameserver/proto/web";
option go_package = "github.com/kyeett/gameserver/proto";
// option go_package = "github.com/golang/protobuf/ptypes/empty";

// Backend defines the interface exposed by the backend.Â´j
// TODO: Define functionality exposed by backend.

message PlayerID {
    string ID = 1;
}

message Entity {
    string ID = 1;
    int32 X = 2;
    int32 Y = 3;
    int32 Theta = 4;
}

message ActionRequest {
    Entity entity = 1;
    enum Action {
        Move = 0;
    }
    Action action =  2;
}


message ActionResponse {
    Entity entity = 1;
}


message WorldResponse {
    bytes tiles = 1;
    int32 width = 2;
    int32 height = 3;
}

message EntityResponse {
    bytes payload = 1;
}


service Backend {
    rpc NewPlayer(google.protobuf.Empty) returns (PlayerID) {}
    rpc PerformAction(ActionRequest) returns (ActionResponse) {}
    rpc WorldRequest(google.protobuf.Empty) returns (WorldResponse) {}
    rpc EntityStream(google.protobuf.Empty) returns (stream EntityResponse) {}
}


